src/main/java/com/example/jokerexamples/dataflow/good/service/BotDecisionService.java
package com.example.jokerexamples.dataflow.good.service;

import org.springframework.stereotype.Service;

@Service
public class DecisionService {

    public String findResponseString(){
        return "WORKING GOOD!!!";
    }
}
