src/main/java/com/example/jokerexamples/dataflow/bad/listener/TelegBot.java
package com.example.jokerexamples.dataflow.bad.listener;

import org.springframework.stereotype.Service;

/**
 * Простой пример как Ботов часто переносят в 'listener' пакеты,
 * никак не вяжется ни с 3-х звенкой, ни с Гексагоналкой
 */
@Service
public class TelegBot {
}
